お財布の中身を更新

--- a/HTML/Celebration/wallet.html
+++ b/HTML/Celebration/wallet.html
@@ -67,7 +67,7 @@
                     <div class="ticket-content">
                         <p class="ticket-description">好きな化粧品を選べるギフト券</p>
                         <div class="ticket-details">
-                            <p><strong>💰 残り金額:</strong> 約7,200円分</p>
+                            <p><strong>💰 残り金額:</strong> 約5,200円分</p>
                             <p><strong>🏪 利用場所:</strong> ドラッグストア・デパート・オンラインなどなど</p>
                             <p><strong>📅 前回使用:</strong> 約1か月前</p>
                         </div>
@@ -148,6 +148,11 @@
             <div class="usage-history">
                 <h3>📜 使用履歴</h3>
                 <div class="history-list">
+                    <div class="history-item">
+                        <span class="history-date">2025年10月13日</span>
+                        <span class="history-ticket">②コスメチケット</span>
+                        <span class="history-amount">2,000円分使用</span>
+                    </div>
                     <div class="history-item">
                         <span class="history-date">2025年8月25日</span>
                         <span class="history-ticket">⑤エンタメチケット</span>
