--- a/HTML/home.html
+++ b/HTML/home.html
@@ -87,19 +87,19 @@
         <div class="news-container">
             <h2 class="news-title">お知らせ</h2>
             <div class="news-item">
-                <h3 class="news-item-title">最後のプレゼント解放！</h3>
-                <p class="news-item-date">2025年9月1日</p>
+                <h3 class="news-item-title">お財布の金額の更新</h3>
+                <p class="news-item-date">2025年10月16日</p>
             </div>
             <div class="news-item">
-                <h3 class="news-item-title">5等分旅行計画ページに日帰りプラン＆カルビープラスを追加！</h3>
-                <p class="news-item-date">2025年7月24日</p>
+                <h3 class="news-item-title">最後のプレゼント解放！</h3>
+                <p class="news-item-date">2025年9月1日</p>
             </div>
         </div>
     </section>
 
     <section class="update-section">
         <h2>更新日</h2>
-        <p>最終更新日: 2025年9月1日</p>
+        <p>最終更新日: 2025年10月16日</p>
     </section>
 
     <footer>
